syntax = "proto2";

package snapshot;

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/clients/snapshot/config";

////////////////////////////////////////////////////////////////////////////////

message Zone {
    repeated string Endpoints = 1;
}

message ClientConfig {
    optional string DefaultZoneId = 1;
    map<string, Zone> Zones = 2;
    optional uint32 BlockSize = 3 [default = 4194304];
    optional bool Secure = 4;
    optional string RootCertsFile = 5;
    optional bool DisableAuthentication = 6;
}
