syntax = "proto2";

package images;

import "google/protobuf/duration.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/services/images/config";

////////////////////////////////////////////////////////////////////////////////

message DiskPoolConfig {
    optional string ZoneId = 1;
    optional uint32 Capacity = 2;
}

message ImagesConfig {
    optional string SnapshotTaskPingPeriod = 1 [default = "1s"];
    optional string SnapshotTaskHeartbeatTimeout = 2 [default = "10s"];
    optional string SnapshotTaskBackoffTimeout = 3 [default = "12s"];
    optional string DeletedImageExpirationTimeout = 4 [default = "30m"];
    optional string ClearDeletedImagesTaskScheduleInterval = 5 [default = "1m"];
    optional uint32 ClearDeletedImagesLimit = 6 [default = 1000];
    optional string StorageFolder = 7 [default = "images"];
    repeated DiskPoolConfig DefaultDiskPoolConfigs = 8;
    // Use dataplane tasks for everyone.
    optional bool UseDataplaneTasks = 9;
    // Use dataplane tasks for list of folders.
    repeated string UseDataplaneTasksForFolder = 10;
    optional bool UseDataplaneTasksForLegacySnapshots = 11;
    repeated string UseDataplaneFromURLTasksForFolder = 12;
    repeated string UseS3ForFolder = 13;
}
